Fix Elixir 1.19 type system warnings (#490)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,7 @@
+---
 name: CI
 
-on:
+'on':
   pull_request:
     branches:
       - "**"
@@ -20,10 +21,12 @@ jobs:
           elixir-version: 1.15.x
       - name: Retrieve dependencies cache
         uses: actions/cache@v3
-        id: mix-cache # id to use in retrieve action
+        id: mix-cache  # id to use in retrieve action
         with:
           path: deps
-          key: v1-${{ matrix.os }}-${{ matrix.otp }}-${{ matrix.elixir }}-mix-${{ hashFiles(format('{0}{1}', github.workspace, '/mix.lock')) }}
+          key: >-
+            v1-${{ matrix.os }}-${{ matrix.otp }}-${{ matrix.elixir }}-mix-${{
+            hashFiles(format('{0}{1}', github.workspace, '/mix.lock')) }}
       - name: Install Dependencies
         run: mix deps.get 1>/dev/null
       - name: Check format
@@ -35,6 +38,9 @@ jobs:
       matrix:
         otp: [24.x, 25.x, 26.1.x]
         elixir: [1.15.x]
+        include:
+          - otp: 28.x
+            elixir: 1.19.x
 
     needs: check_format
     steps:
@@ -45,10 +51,12 @@ jobs:
           elixir-version: ${{matrix.elixir}}
       - name: Retrieve dependencies cache
         uses: actions/cache@v3
-        id: mix-cache # id to use in retrieve action
+        id: mix-cache  # id to use in retrieve action
         with:
           path: deps
-          key: v1-${{ matrix.os }}-${{ matrix.otp }}-${{ matrix.elixir }}-mix-${{ hashFiles(format('{0}{1}', github.workspace, '/mix.lock')) }}
+          key: >-
+            v1-${{ matrix.os }}-${{ matrix.otp }}-${{ matrix.elixir }}-mix-${{
+            hashFiles(format('{0}{1}', github.workspace, '/mix.lock')) }}
       - name: Install Dependencies
         run: mix setup 1>/dev/null
       - name: Run Tests
@@ -66,10 +74,12 @@ jobs:
           elixir-version: 1.15.x
       - name: Retrieve dependencies cache
         uses: actions/cache@v3
-        id: mix-cache # id to use in retrieve action
+        id: mix-cache  # id to use in retrieve action
         with:
           path: deps
-          key: v1-${{ matrix.os }}-${{ matrix.otp }}-${{ matrix.elixir }}-mix-${{ hashFiles(format('{0}{1}', github.workspace, '/mix.lock')) }}
+          key: >-
+            v1-${{ matrix.os }}-${{ matrix.otp }}-${{ matrix.elixir }}-mix-${{
+            hashFiles(format('{0}{1}', github.workspace, '/mix.lock')) }}
       - name: Install Dependencies
         run: mix deps.get 1>/dev/null
         working-directory: ./interop
@@ -86,6 +96,9 @@ jobs:
       matrix:
         otp: [24.x, 25.x, 26.1.x]
         elixir: [1.15.x]
+        include:
+          - otp: 28.x
+            elixir: 1.19.x
 
     steps:
       - uses: actions/checkout@v3
@@ -95,10 +108,12 @@ jobs:
           elixir-version: ${{ matrix.elixir }}
       - name: Retrieve dependencies cache
         uses: actions/cache@v3
-        id: mix-cache # id to use in retrieve action
+        id: mix-cache  # id to use in retrieve action
         with:
           path: deps
-          key: v1-${{ matrix.os }}-${{ matrix.otp }}-${{ matrix.elixir }}-mix-${{ hashFiles(format('{0}{1}', github.workspace, '/mix.lock')) }}
+          key: >-
+            v1-${{ matrix.os }}-${{ matrix.otp }}-${{ matrix.elixir }}-mix-${{
+            hashFiles(format('{0}{1}', github.workspace, '/mix.lock')) }}
       - name: Install Dependencies
         run: mix deps.get 1>/dev/null
         working-directory: ./interop
